Added map and internal links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
               <img src="img/logo.png" alt="Спектр Ремонт">
             </a>
             <ul class="top-menu">
-              <li><a href="#" class="top-menu__link">Услуги</a></li>
-              <li><a href="#" class="top-menu__link">Прайс-лист</a></li>
-              <li><a href="#" class="top-menu__link">О нас</a></li>
-              <li><a href="#" class="top-menu__link">Портфолио</a></li>
+              <li><a href="#services" class="top-menu__link">Услуги</a></li>
+              <li><a href="#price-list" class="top-menu__link">Прайс-лист</a></li>
+              <li><a href="#about-us" class="top-menu__link">О нас</a></li>
+              <li><a href="#portfolio" class="top-menu__link">Портфолио</a></li>
             </ul>
           </nav>
           <div class="header__right">
@@ -108,7 +108,7 @@
         </div>
       </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
       <div class="container">
         <div class="services__container">
           <h2 class="services__title section-title">НАШИ УСЛУГИ</h2>
@@ -167,7 +167,7 @@
                 </div>
                 </div> 
             </article>
-            <article class="service-card">
+            <article class="service-card service-card--last">
               <div class="service-card__img">
                 <img src="img/services/services__furniture-install.jpg" alt="Ремонт ванной комнаты">
               </div>
@@ -222,11 +222,11 @@
                 </div> 
             </article>
           </div>
-          <button class="services__btn btn">ВСЕ УСЛУГИ</button>
+          <a class="services__btn btn">ВСЕ УСЛУГИ</a>
         </div>
       </div>
     </section>
-    <section class="price-list">
+    <section class="price-list" id="price-list">
       <div class="container">
         <div class="price-list__container">
           <h2 class="price-list__title section-title section-title--light">
@@ -358,7 +358,7 @@
         </div>
       </div>
     </section>
-    <section class="about-us">
+    <section class="about-us" id="about-us">
       <div class="container">
         <div class="about-us__container">
           <div class="about-us__top">
@@ -451,7 +451,7 @@
         </div>
       </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="container">
         <div class="portfolio__container">
           <h2 class="portfolio__title section-title">
@@ -582,10 +582,10 @@
               </a>
               <nav class="footer__menu">
                 <ul class="footer-menu">
-                  <li><a href="#" class="footer-menu__link">Услуги</a></li>
-                  <li><a href="#" class="footer-menu__link">Прайс-лист</a></li>
-                  <li><a href="#" class="footer-menu__link">О нас</a></li>
-                  <li><a href="#" class="footer-menu__link">Портфолио</a></li>
+                  <li><a href="#services" class="footer-menu__link">Услуги</a></li>
+                  <li><a href="#price=list" class="footer-menu__link">Прайс-лист</a></li>
+                  <li><a href="#about-us" class="footer-menu__link">О нас</a></li>
+                  <li><a href="#portfolio" class="footer-menu__link">Портфолио</a></li>
                 </ul>
               </nav>
             </div>
@@ -600,7 +600,7 @@
           </div>
           <div class="footer__right">
             <div class="footer__map">
-              <img src="img/map.png" alt="">
+              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/spektr/1132346241/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Спектр</a><a href="https://yandex.ru/maps/10840/uglich/category/plumbing_shop/184107711/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин сантехники в Угличе</a><a href="https://yandex.ru/maps/10840/uglich/category/household_goods_and_chemicals_shop/184108093/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин хозтоваров и бытовой химии в Угличе</a><iframe src="https://yandex.ru/map-widget/v1/?ll=38.334446%2C57.541672&mode=poi&poi%5Bpoint%5D=38.334245%2C57.541696&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D1132346241&z=18.37" width="460" height="300" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
             </div>
             <p class="footer__address">
               г. Углич, Рыбинское шоссе 20А
