--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper"> 
-    <header class="header">
+    <header class="header" id="start">
       <div class="container">
         <div class="header__container">
           <nav class="header__left"> 
@@ -27,7 +27,11 @@
             <a href="tel:89106633190"><img src="img/icons/common/common__phone.svg" alt="" class="header__tel-icon"></a>
             <a href="tel:89106633190" class="header__tel"><span class="deco-yellow">+</span> 7 <span class="deco-yellow">(</span>910<span class="deco-yellow">)</span> 663<span class="deco-yellow">-</span>31<span class="deco-yellow">-</span>90</a>
           </div>
-          <div class="burger-menu"></div>
+          <div class="burger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -571,7 +575,7 @@
         <div class="footer__container">
           <div class="footer__left">
             <div class="footer__left-top">
-              <a href="#" class="footer__logo">
+              <a href="#start" class="footer__logo">
                 <img src="img/logo.png" alt="Спектр - Ремонт">
               </a>
               <p class="footer__descr">
