Added scrollbar on price-list menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="promo__title">
               Отделочные работы и ремонт <br/> в <span class="deco-yellow">Угличе</span>
             </h1>
-            <a href="#" class="promo__btn btn">ПОДРОБНЕЕ</a>
+            <a href="#services" class="promo__btn btn">ПОДРОБНЕЕ</a>
           </div>
           <div class="promo__slider slider">
             <div class="slider__content">
@@ -117,7 +117,7 @@
         <div class="services__container">
           <h2 class="services__title section-title">НАШИ УСЛУГИ</h2>
           <div class="services__cards">
-            <article class="service-card service-card--on-click">
+            <article class="service-cardgit">
               <div class="service-card__img">
                 <img src="img/services/services__flat-renov.jpg" alt="Ремонт квартиры">
               </div>
@@ -604,7 +604,7 @@
           </div>
           <div class="footer__right">
             <div class="footer__map">
-              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/spektr/1132346241/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Спектр</a><a href="https://yandex.ru/maps/10840/uglich/category/plumbing_shop/184107711/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин сантехники в Угличе</a><a href="https://yandex.ru/maps/10840/uglich/category/household_goods_and_chemicals_shop/184108093/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин хозтоваров и бытовой химии в Угличе</a><iframe src="https://yandex.ru/map-widget/v1/?ll=38.334446%2C57.541672&mode=poi&poi%5Bpoint%5D=38.334245%2C57.541696&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D1132346241&z=18.37" width="460" height="300" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/spektr/1132346241/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Спектр</a><a href="https://yandex.ru/maps/10840/uglich/category/plumbing_shop/184107711/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин сантехники в Угличе</a><a href="https://yandex.ru/maps/10840/uglich/category/household_goods_and_chemicals_shop/184108093/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин хозтоваров и бытовой химии в Угличе</a><iframe src="https://yandex.ru/map-widget/v1/?ll=38.334446%2C57.541672&mode=poi&poi%5Bpoint%5D=38.334245%2C57.541696&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D1132346241&z=18.37" width="100%" height="300" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
             </div>
             <p class="footer__address">
               г. Углич, Рыбинское шоссе 20А
