Added animations and small changes in burger-menu

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="services__container">
           <h2 class="services__title section-title">НАШИ УСЛУГИ</h2>
           <div class="services__cards">
-            <article class="service-cardgit">
+            <article class="service-card">
               <div class="service-card__img">
                 <img src="img/services/services__flat-renov.jpg" alt="Ремонт квартиры">
               </div>
