Optimized images and removed bugs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./service-files/favicon.ico" />
+  <link rel="apple-touch-icon" href="./service-files/logo192.png" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Спектр - Ремонт</title>
 </head>
 <body>
   <div class="wrapper"> 
@@ -126,8 +128,12 @@
                   <h3 class="service-card__title elem-title">
                     Ремонт квартиры
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">
+                    Косметический ремонт квартиры целиком или отдельных помещений. Поклейка обоев или панелей, замена напольных покрытий.
+                  </p>
+                  <p class="service-card__descr">
+                    Если сомневаетесь, мы подскажем, какие материалы подойдут лучше со стороны надежности и стиля.
+                  </p>
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -142,10 +148,10 @@
               <div class="service-card__content">
                 <div class="service-card__content-top">
                   <h3 class="service-card__title elem-title">
-                    Ремонт частного дома
+                    Мастер на час
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Выполнение любых мелких работ бытового характера. Повесить карниз, полку или отремонтировать смеситель. </p>
+                  <p class="service-card__descr">У всех работников большой опыт в сантехнических работах и электрике.</p>
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -162,8 +168,8 @@
                   <h3 class="service-card__title elem-title">
                     Ремонт ванной комнаты
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Отделаем ванну ПВХ панелями, подскажем хорошего плиточника и установим все: от смесителя до ванны и душевой кабины.</p>
+                  
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -180,8 +186,7 @@
                   <h3 class="service-card__title elem-title">
                     Сборка и установка мебели
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Соберем и установим кухонный гарнитур, тумбу или пенал для ванной комнаты, а также любую мебель, которую вы приобрели.</p>
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -198,8 +203,8 @@
                   <h3 class="service-card__title elem-title">
                     Ремонт кухни
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Установим новый смеситель, сделаем фартук из панелей или плитки, соберем и повесим гарнитур, установим дополнительное освещение. </p>
+                  <p class="service-card__descr">Выполним все работы, которые вам требуются.</p>
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -214,10 +219,9 @@
               <div class="service-card__content">
                 <div class="service-card__content-top">
                   <h3 class="service-card__title elem-title">
-                    Ремонт новостройки
+                    Ремонт комнаты
                   </h3>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
-                  <p class="service-card__descr">Передача сигнала может осуществляться по кабелю и по радиоканалу</p>
+                  <p class="service-card__descr">Отштукатурим, поклеим обои, покрасим стены, постелем ламинат или линолеум. Поможем сделать комнату свежей и чистой.</p>
                 </div>
                 <div class="service-card__content-bottom">
                   <div class="service-card__close-btn">
@@ -261,12 +265,22 @@
                 <article class="pl-table__row">
                   <p>Постил линолеума</p>
                   <p>м2</p>
-                  <p>250 РУБ</p>
+                  <p>120 РУБ</p>
+                </article>
+                <article class="pl-table__row">
+                  <p>Установка порога</p>
+                  <p>шт</p>
+                  <p>200 РУБ</p>
                 </article>
                 <article class="pl-table__row">
                   <p>Установка плинтусов</p>
-                  <p>м</p>
-                  <p>50 РУБ</p>
+                  <p>м.п.</p>
+                  <p>100 РУБ</p>
+                </article>
+                <article class="pl-table__row">
+                  <p>Другие виды работ...</p>
+                  <p></p>
+                  <p></p>
                 </article>
               </div>
               <div class="pl-table">
@@ -278,17 +292,22 @@
                 <article class="pl-table__row">
                   <p>Поклейка обоев</p>
                   <p>м2</p>
-                  <p>250 РУБ</p>
+                  <p>150 РУБ</p>
                 </article>
                 <article class="pl-table__row">
-                  <p>Штукатурка</p>
+                  <p>Шпатлевка стен (один слой)</p>
                   <p>м2</p>
-                  <p>250 РУБ</p>
+                  <p>200 РУБ</p>
                 </article>
                 <article class="pl-table__row">
                   <p>Панели ПВХ</p>
                   <p>м2</p>
-                  <p>250 РУБ</p>
+                  <p>? РУБ</p>
+                </article>
+                <article class="pl-table__row">
+                  <p>Другие виды работ...</p>
+                  <p></p>
+                  <p></p>
                 </article>
               </div>
               <div class="pl-table">
@@ -299,8 +318,8 @@
                 </article>
                 <article class="pl-table__row">
                   <p>Потолочные плинтуса</p>
-                  <p>м2</p>
-                  <p>250 РУБ</p>
+                  <p>м.п.</p>
+                  <p>100 РУБ</p>
                 </article>
                 <article class="pl-table__row">
                   <p>Потолочная плитка</p>
@@ -330,9 +349,24 @@
                   <p>1500 РУБ</p>
                 </article>
                 <article class="pl-table__row">
+                  <p>Установка ванны с обрамлением</p>
+                  <p>шт</p>
+                  <p>2500 РУБ</p>
+                </article>
+                <article class="pl-table__row">
                   <p>Установка душевой кабины</p>
                   <p>шт</p>
                   <p>5000 РУБ</p>
+                </article>
+                <article class="pl-table__row">
+                  <p>Установка тумбы со смесителем</p>
+                  <p>шт</p>
+                  <p>1500 РУБ</p>
+                </article>
+                <article class="pl-table__row">
+                  <p>Другие виды работ...</p>
+                  <p></p>
+                  <p></p>
                 </article>
                 </div>
                 <div class="pl-table">
@@ -347,9 +381,9 @@
                     <p>600 РУБ</p>
                   </article>
                   <article class="pl-table__row">
-                    <p>Монтаж розетки</p>
+                    <p>Монтаж или ремонт розетки/выключателя</p>
                     <p>шт</p>
-                    <p>300 РУБ</p>
+                    <p>200 РУБ</p>
                   </article>
                   <article class="pl-table__row">
                     <p>Другие виды работ...</p>
@@ -370,10 +404,10 @@
               <h2 class="about-us__title section-title">О НАС</h2>
               <div class="about-us__info">
                 <p class="about-us__descr">
-                Спектр - это более 20 лет на рынке строительных материалов и свыше 10 лет опыта работы в отделочных работах.
+                  Магазин «Спектр» уже более 20 лет на рынке строительных материалов города, свыше 10 лет мы оказываем услуги по отделке.
                 </p>
                 <p class="about-us__descr">
-                Системы видеонаблюдения пользуются популярностью среди систем безопасности и в настоящее время устанавливаются не только на таких крупных 
+                  Точно так же, как вы можете приобрести у нас сантехнику, обои, кухни и многое другое, так и заказать установку и ремонт. Мы рады помочь осуществить ваши идеи.
               </p>
               </div>
               <div class="about-us__steps">
@@ -545,7 +579,7 @@
         </div>
       </div>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="container">
         <div class="contacts__container">
           <div class="contacts__left">
@@ -581,7 +615,7 @@
               <p class="footer__descr">
                 Строительные и отделочные работы в городе Углич и Угличском районе:
               </p>
-              <a class="footer__callback-btn btn">
+              <a class="footer__callback-btn btn" href="#contacts">
                 ЗАКАЗАТЬ ЗВОНОК
               </a>
               <nav class="footer__menu">
