Added project for portfolio

--- a/index.html
+++ b/index.html
@@ -499,75 +499,105 @@
             <div class="pf-project pf-project--accent">
               <div class="pf-project__slider">
                 <div class="pf-project__img">
-                  <img class="pf-project__slider-img pf-project__slider-img--active" src="img/services/services__bathroom-renov.jpg" alt="">
-                  <img class="pf-project__slider-img" src="img/services/services__kitchen-renov.jpg" alt="">
-                  <img class="pf-project__slider-img" src="img/services/services__flat-renov.jpg" alt="">
+                  <img class="pf-project__slider-img pf-project__slider-img--active" src="img/portfolio/project__1/after__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__3.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__3.jpg" alt="Выполенный проект">
                 </div>
                 <div class="pf-project__nav slider-nav slider-nav--dark">
                   <button class="slider-btn slider-btn--active"></button>
                   <button class="slider-btn"></button>
                   <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
                 </div>
-              </div>
-              <h3 class="pf-project__title">
-                Ремонт квартиры в Солнечном
-              </h3>
-              <p class="pf-project__descr">
-                Приемо-контрольный прибор, приняв тревожный сигнал датчика, проводит оповещение заранее запрограммированным способом.
-              </p>
-            </div>
-            <div class="pf-project pf-project--promo">
-              <div class="pf-project__img">
-                <img class="pf-project__slider-img pf-project__slider-img--active" src="img/services/services__kitchen-renov.jpg" alt="">
-                <img class="pf-project__slider-img " src="img/services/services__bathroom-renov.jpg" alt="">
-                <img class="pf-project__slider-img" src="img/services/services__flat-renov.jpg" alt="">
-              </div>
-              <div class="pf-project__nav slider-nav slider-nav--dark">
-                <button class="slider-btn slider-btn--active"></button>
-                <button class="slider-btn"></button>
-                <button class="slider-btn"></button>
-              </div>
-              <h3 class="pf-project__title">
-                Ремонт квартиры в Цветочном
-              </h3>
-              <p class="pf-project__descr">
-                Приемо-контрольный прибор, приняв тревожный сигнал датчика, проводит оповещение заранее запрограммированным способом.
-              </p>
-            </div>
-            <div class="pf-project">
-              <div class="pf-project__img">
-                <img class="pf-project__slider-img pf-project__slider-img--active" src="img/services/services__bathroom-renov.jpg" alt="">
-                <img class="pf-project__slider-img" src="img/services/services__kitchen-renov.jpg" alt="">
-                <img class="pf-project__slider-img" src="img/services/services__flat-renov.jpg" alt="">
-              </div>
-              <div class="pf-project__nav slider-nav slider-nav--dark">
-                <button class="slider-btn slider-btn--active"></button>
-                <button class="slider-btn"></button>
-                <button class="slider-btn"></button>
-              </div>
-              <h3 class="pf-project__title">
-                Ремонт квартиры на Часовом
-              </h3>
-              <p class="pf-project__descr">
-                Приемо-контрольный прибор, приняв тревожный сигнал датчика, проводит оповещение заранее запрограммированным способом.
-              </p>
-            </div>
-            <div class="pf-project">
-              <div class="pf-project__img">
-                <img class="pf-project__slider-img" src="img/services/services__bathroom-renov.jpg" alt="">
-                <img class="pf-project__slider-img" src="img/services/services__kitchen-renov.jpg" alt="">
-                <img class="pf-project__slider-img pf-project__slider-img--active" src="img/services/services__flat-renov.jpg" alt="">
-              </div>
-              <div class="pf-project__nav slider-nav slider-nav--dark">
-                <button class="slider-btn slider-btn--active"></button>
-                <button class="slider-btn"></button>
-                <button class="slider-btn"></button>
               </div>
               <h3 class="pf-project__title">
                 Ремонт квартиры в Мирном
               </h3>
               <p class="pf-project__descr">
-                Приемо-контрольный прибор, приняв тревожный сигнал датчика, проводит оповещение заранее запрограммированным способом.
+                Отделка с нуля. В комнате, коридоре и на кухне поклеены обои, уложен ламинат. Установлен кухонный гарнитур, ванная отделана плиткой и панелями ПВХ, установлена вся необходимая сантехника. Выполнено множество других мелких работ.
+              </p>
+            </div>
+            <div class="pf-project pf-project--promo">
+              <div class="pf-project__slider">
+                <div class="pf-project__img">
+                  <img class="pf-project__slider-img pf-project__slider-img--active" src="img/portfolio/project__1/after__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__3.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__3.jpg" alt="Выполенный проект">
+                </div>
+                <div class="pf-project__nav slider-nav slider-nav--dark">
+                  <button class="slider-btn slider-btn--active"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                </div>
+              </div>
+              <h3 class="pf-project__title">
+                Ремонт квартиры в Мирном
+              </h3>
+              <p class="pf-project__descr">
+                Отделка с нуля. В комнате, коридоре и на кухне поклеены обои, уложен ламинат. Установлен кухонный гарнитур, ванная отделана плиткой и панелями ПВХ, установлена вся необходимая сантехника. Выполнено множество других мелких работ.
+              </p>
+            </div>
+            <div class="pf-project">
+              <div class="pf-project__slider">
+                <div class="pf-project__img">
+                  <img class="pf-project__slider-img pf-project__slider-img--active" src="img/portfolio/project__1/after__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__3.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__3.jpg" alt="Выполенный проект">
+                </div>
+                <div class="pf-project__nav slider-nav slider-nav--dark">
+                  <button class="slider-btn slider-btn--active"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                </div>
+              </div>
+              <h3 class="pf-project__title">
+                Ремонт квартиры в Мирном
+              </h3>
+              <p class="pf-project__descr">
+                Отделка с нуля. В комнате, коридоре и на кухне поклеены обои, уложен ламинат. Установлен кухонный гарнитур, ванная отделана плиткой и панелями ПВХ, установлена вся необходимая сантехника. Выполнено множество других мелких работ.
+              </p>
+            </div>
+            <div class="pf-project">
+              <div class="pf-project__slider">
+                <div class="pf-project__img">
+                  <img class="pf-project__slider-img pf-project__slider-img--active" src="img/portfolio/project__1/after__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/after__3.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__1.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__2.jpg" alt="Выполенный проект">
+                  <img class="pf-project__slider-img" src="img/portfolio/project__1/before__3.jpg" alt="Выполенный проект">
+                </div>
+                <div class="pf-project__nav slider-nav slider-nav--dark">
+                  <button class="slider-btn slider-btn--active"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                  <button class="slider-btn"></button>
+                </div>
+              </div>
+              <h3 class="pf-project__title">
+                Ремонт квартиры в Мирном
+              </h3>
+              <p class="pf-project__descr">
+                Отделка с нуля. В комнате, коридоре и на кухне поклеены обои, уложен ламинат. Установлен кухонный гарнитур, ванная отделана плиткой и панелями ПВХ, установлена вся необходимая сантехника. Выполнено множество других мелких работ.
               </p>
             </div>
             <div class="portfolio__next">
